--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,18 +18,26 @@
 /*-------------------------------------Constants---------------------------------------*/
 
 
-$bluecolor: #81B6DB;  // blue  //
-$greencolor: #77DD77;    // green // 
-$redcolor: #FF4955;   // red //
-$orangecolor: #FFB246;   // orange //
-$whitecolor: #fff;     // white // 
-$blackcolor: #000;
+$blue: #81B6DB;  // blue  //
+$green: #77DD77;    // green // 
+$red: #FF4959;   // red //
+$darkred: #EE4558; // darker red //
+$lightred: #FFD8E8; // light red//
+$orange: #FFB246;   // orange //
+$white: #fff;     // white // 
+$black: #000; // black //
+$grey: #eee; // lightgrey //
+$purple: #8171B6; // lightgrey //
+
+
+
+
 
 
 /*-------------------------------------Main Style---------------------------------------*/
 
 body {
-  background:$whitecolor;
+  background:$white;
   color:#fff;
   margin:0;
   padding: 0;
@@ -84,17 +92,16 @@ body {
   padding: 0;
   width:100%;
   height:100vh;
-  background-color:$bluecolor;
+  background-color:$blue;
   opacity: 0.7;
 }
 
-/*----------------------------------------Search----------------------------------------*/
 /*--------------------------------------Main Title--------------------------------------*/
 .header {
   width:100%;
   height:10vh;
   position:fixed;
-  background-color:$redcolor;
+  background-color:$red;
   // box-shadow:0 0 10px 0 rgba(0,0,0,0.6);
   z-index:8;
   opacity: 0.95;
@@ -115,7 +122,7 @@ body {
   line-height:10vh;
   font-weight:500;
   text-decoration:none;
-  color:$whitecolor;
+  color:$white;
   padding:20px 30px 15px 40px
 }
 
@@ -128,6 +135,7 @@ body {
   left: 0;
   width:100%;
   font-size: 2.5rem;
+  z-index: -1;
 }
 
 .tag-wrap {
@@ -135,7 +143,7 @@ body {
 }
 
 .tag-wrap:hover{
-  color:$bluecolor;
+  color:$lightred;
 }
 
 .tags-button {
@@ -158,10 +166,10 @@ body {
   left:35vw;
   float: left;
   text-align: center;
-  z-index: 6;
+  z-index: 5;
   background-color: rgba(0,0,0,0.5);
   border-radius:0 0 5px 5px;
-  box-shadow: 0px 6px 60px -5px $blackcolor;
+  box-shadow: 0px 6px 60px -5px $black;
   
   nav {
     position: relative;
@@ -176,8 +184,8 @@ body {
         margin: 5px;
         
          .selected {
-          color:$redcolor;
-          background-color:$whitecolor;
+          color:$purple;
+          background-color:$white;
       }
         
         a {
@@ -185,8 +193,8 @@ body {
           padding: 10px;
           border-radius: 3px; 
           text-decoration:none;
-          color:$whitecolor;
-          background-color:$redcolor;
+          color:$white;
+          background-color:$purple;
         }
       }
     }
@@ -194,126 +202,71 @@ body {
 }
 
 .category-tags a:hover {
-      color:$redcolor;
-      background-color:$whitecolor;
-}
-
-/*  --------------------------------------- Hero Buttons------------------ */
-
-.hero-buttons{
-  position: absolute;
-  z-index:7;
-  top:450px;
-  width: 100%;
-}
-#random-button,.mostrecent-button {
-  font-size:1.5rem;
-  position:relative;
-  padding:10px;
-  cursor:pointer;
-  text-decoration:none;
-  color:$whitecolor;
-  border:2px solid $whitecolor;
-  border-radius: 3px;
-}
-
-.start-watching {
-  font-size:2rem;
-  width:100%;
-  position:absolute;
-  cursor:default;
-  z-index:7;
-  padding:5px;
-  left:0;
-  margin: 0;
-  padding: 0;
-  top:550px;
-  color:$whitecolor;
-}
-
-.scroll-to-content {
-  font-size:3rem;
-  width:100%;
-  position:absolute;
-  text-align:center;
-  z-index:7;
-  padding:5px;
-  left:0;
-  margin: 0;
-  padding: 0;
-  top:600px;
-  color:$whitecolor; 
-}
-
-.scroll-arrow {
-  cursor: pointer;
-  padding: 10px;
-  -webkit-animation: pulsate 2s ease-out;
-  -webkit-animation-iteration-count: infinite; 
-}
-
-@-webkit-keyframes pulsate {
-    0% {-webkit-transform: scale(1)}
-    50% {-webkit-transform: scale(1.15)}
-    100% {-webkit-transform: scale(1)}
-}
-
-.mostrecent-button {
-  display:inline-block;
-  float: left;
-  margin-right:25px
-}
-
-#random-button {
-  display:inline-block;
-  float: right;
-  margin-left:20px
-}
-
-.hero-phrase {
-  font-size:3rem;
-  position:absolute;
-  cursor:default;
-  width: 100%;
-  padding:5px;
-  left:0;
-  margin: 0;
-  padding: 0;
-  top:300px;
-  color:$whitecolor;
-}
-
-#random-button:hover , .mostrecent-button:hover {
-  background-color: $whitecolor;
-  color: $bluecolor;
+      color:$purple;
+      background-color:$white;
 }
 
 /*  --------------------------------------- Icon Bar ------------------ */
 .search-button,.login-button {
-  position:fixed;
-  margin-top:1.6vh;
   cursor:pointer;
-  float:right;
   padding:10px;
-  z-index:10
+  z-index:12;
 }
 
 .search-button {
-  right:180px
+  margin: 0 0 0 20px;
+  padding: 0;
+  float: left;
+  width:200px;
+  height:10vh;
+  line-height: 10vh;
+  background-color:$darkred;
 }
 
-.search-button i,.login-button i {
+.search-button i {
+  margin-top:3vh;
+  font-size:1.5rem;
+  padding-left: 20px;
+}
+
+.search-input {
+  position: absolute;
+  color:$white;
+  padding-left:10px;
+  border:none;
+  font-family:'Roboto',sans-serif;
+  background-color: rgba(0,0,0,0);
+  font-size: 1.2rem;
+  height:10vh;
+  margin: 0;
+  line-height:10vh;
+}
+
+::-webkit-input-placeholder {
+  font-family:'Roboto',sans-serif;
+   color: $white;
+   font-weight:400;
+}
+
+.search-input:focus {
+  outline:none;
+}
+
+.login-button i {
+  margin-top:1.6vh;
   font-size:1.5rem
 }
 
 .search-button:hover,.login-button:hover {
-  color:$bluecolor
+  color:$lightred;
 }
 
 .login-button {
+  margin-top:1.6vh;
   right:72px;
   text-align:center;
-  width:90px
+  width:90px;
+  float: right;
 }
 
 .user-pop-up {
@@ -351,8 +304,7 @@ body {
   display:block
 }
 
-.extra-button, {
-  position:fixed;
+.extra-button {
   top:0;
   right:0;
   margin-top:1.75vh;
@@ -368,8 +320,98 @@ body {
 }
 
 .extra-button:hover , .current-user:hover , .user-logout:hover , .user-login:hover {
-  color:$bluecolor
+  color:$lightred
 }
+
+/*  --------------------------------------- Hero Buttons------------------ */
+.hero-phrase {
+  font-size:3rem;
+  position:absolute;
+  cursor:default;
+  width: 100%;
+  padding:5px;
+  left:0;
+  margin: 0;
+  padding: 0;
+  top:200px;
+  color:$white;
+}
+
+.hero-buttons{
+  position: absolute;
+  z-index:7;
+  top:400px;
+  width: 100%;
+}
+#random-button,.mostrecent-button {
+  font-size:1.5rem;
+  position:relative;
+  padding:10px;
+  cursor:pointer;
+  text-decoration:none;
+  color:$white;
+  border:2px solid $white;
+  border-radius: 3px;
+}
+
+.start-watching {
+  font-size:2rem;
+  width:100%;
+  position:absolute;
+  cursor:default;
+  z-index:7;
+  padding:5px;
+  left:0;
+  margin: 0;
+  padding: 0;
+  top:500px;
+  color:$white;
+}
+
+.scroll-to-content {
+  font-size:3rem;
+  width:100%;
+  position:absolute;
+  text-align:center;
+  z-index:7;
+  padding:5px;
+  left:0;
+  margin: 0;
+  padding: 0;
+  top:550px;
+  color:$white; 
+}
+
+.scroll-arrow {
+  cursor: pointer;
+  padding: 10px;
+  -webkit-animation: pulsate 2s ease-out;
+  -webkit-animation-iteration-count: infinite; 
+}
+
+@-webkit-keyframes pulsate {
+    0% {-webkit-transform: scale(1)}
+    50% {-webkit-transform: scale(1.15)}
+    100% {-webkit-transform: scale(1)}
+}
+
+.mostrecent-button {
+  display:inline-block;
+  float: left;
+  margin-right:25px
+}
+
+#random-button {
+  display:inline-block;
+  float: right;
+  margin-left:20px
+}
+
+#random-button:hover , .mostrecent-button:hover {
+  background-color: $white;
+  color: $blue;
+}
+
 
 /*--------------------------------------- Side Bar ------------------ */
 
@@ -378,8 +420,7 @@ body {
   height:100%;
   right:-200px;
   margin-top:10vh;
-  background-color:$bluecolor;
-  // box-shadow:0 0 10px 0 rgba(0,0,0,0.5);
+  background-color:$blue;
 }
 
 [data-sidebar] {
@@ -419,17 +460,14 @@ body {
   bottom:110px
 }
 
-.static-links .selected{
-  color:$redcolor;
+.static-links .selected, .sidebar-buttons ul li a:hover {
+  color:$purple;
+  font-weight:500;
 }
 
 .static-pages a{
   text-decoration:none;
   color:#fff
-}
-
-.sidebar-buttons ul li a:hover {
-  color:$redcolor
 }
 
 [data-sidebar-dimmer] {
@@ -487,7 +525,7 @@ body {
   height:200px;
   line-height:1.5rem;
   font-size:1.5rem;
-  color:$redcolor;
+  color:$red;
   padding:1px 10px
 }
 
@@ -519,7 +557,7 @@ body {
 }
 
 .field {
-  color:$redcolor;
+  color:$red;
 }
 
 
