--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,11 @@
     <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
     
       <div class="logo"><%= link_to 'TEA.', root_path %></div>
-
+      <div class="search-button">
+            <i class="fa fa-search search-icon"></i>
+            <input type="text" class="search-input" placeholder="Search"></input>
+      </div>
+      
       <div class="tag-container center">
           <div class="tag-wrap">
                 <h3 class="tag-title">Tags</h3>
@@ -43,9 +47,9 @@
           <div class="category-tags center">  
               <nav >
                 <ul>  
-                      <li> <%= nav_link_to 'All', root_path %></li>
+                      <li> <%= nav_link_to 'All', root_path, class: 'category-links'  %></li>
                       <% Category.all.each do |category|%>
-                          <li><%= nav_link_to category.name, root_path(name: category.name) %></li>
+                          <li><%= nav_link_to category.name, root_path(name: category.name), class: 'category-links' %></li>
                         <%end%>
 
                 </ul>
@@ -66,11 +70,7 @@
                   <i class="fa fa-user user-icon"></i>
                   <% end %>
           <% end %>
-        </div>  
-
-      <div class="search-button">
-            <i class="fa fa-search search-icon"></i>
-      </div>
+      </div>  
 
     </div>
 
@@ -154,6 +154,7 @@
     });
 });
 </script>
+
 
 </body>
 </html>
