--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,10 +1,13 @@
 <div class="main-container">
+	<div class="vid-menu">
+		<i class="fa fa-twitter-square"></i>
+	</div>
 	<div class="vote-wrapper">
 			<%= render 'like', post: post %>
 	</div>
 	<div class="bookmark-wrapper">
 		<%= link_to bookmark_post_path(post), remote: true, method: :put, id: dom_id(post), class: 'bookmark' do %>
-    		<i class="fa fa-bookmark"></i>
+    		<%= image_tag("1442420149_icon-18-bookmark.png")%>
     	<%end%>
     </div>
 
