--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,7 +102,7 @@ body {
   height:10vh;
   position:fixed;
   background-color:$red;
-  // box-shadow:0 0 10px 0 rgba(0,0,0,0.6);
+  /*box-shadow:0 0 10px 0 rgba(0,0,0,0.6);*/
   z-index:8;
   opacity: 0.95;
 }
