--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -72,10 +72,8 @@ iframe {
 }
 
 .post-container:hover .overlay {
-
   background:$purple;
   opacity:.9
-
 }
 
 .post-information {
@@ -115,7 +113,7 @@ iframe {
 .vid-menu i {
   font-size: 3rem;
   position: absolute;
-  color: $bluecolor;
+  color: $blue;
 }
 
 
@@ -126,7 +124,7 @@ iframe {
   text-align:center;
   top:20px;
   right:20px;
-  background-color: $bluecolor; 
+  background-color: $blue; 
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -158,7 +156,7 @@ iframe {
   text-align:center;
   top:20px;
   right:100px;
-  background-color: $bluecolor; 
+  background-color: $blue; 
   width: 50px;
   height: 50px;
   border-radius: 50%;
