--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -115,7 +115,7 @@ iframe {
 .vid-menu i {
   font-size: 3rem;
   position: absolute;
-  color: $bluecolor;
+  color: $blue;
 }
 
 
@@ -126,7 +126,7 @@ iframe {
   text-align:center;
   top:20px;
   right:20px;
-  background-color: $bluecolor; 
+  background-color: $blue; 
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -158,7 +158,7 @@ iframe {
   text-align:center;
   top:20px;
   right:100px;
-  background-color: $bluecolor; 
+  background-color: $blue; 
   width: 50px;
   height: 50px;
   border-radius: 50%;
