--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -173,6 +173,7 @@ body {
   
   nav {
     position: relative;
+    
     ul {
       margin: 0 0 10px 0;
       padding: 10px;
@@ -207,7 +208,7 @@ body {
 }
 
 /*  --------------------------------------- Icon Bar ------------------ */
-.search-button,.login-button {
+.search-button {
   cursor:pointer;
   padding:10px;
   z-index:12;
@@ -238,6 +239,7 @@ body {
   background-color: rgba(0,0,0,0);
   font-size: 1.2rem;
   height:10vh;
+  width:130px;
   margin: 0;
   line-height:10vh;
 }
@@ -252,62 +254,88 @@ body {
   outline:none;
 }
 
-.login-button i {
-  margin-top:1.6vh;
-  font-size:1.5rem
-}
 
-.search-button:hover,.login-button:hover {
+.search-button:hover{
   color:$lightred;
 }
+/*  --------------------------------------- login ------------------ */
 
-.login-button {
-  margin-top:1.6vh;
-  right:72px;
-  text-align:center;
-  width:90px;
+.login-section {
   float: right;
-}
-
-.user-pop-up {
-  position:fixed;
-  top:50px;
-  right:8px;
-  display:none
+  margin-right: 5px;
+  z-index:6;  
+  height: 10vh;
 }
 
 .user-login {
   text-decoration:none;
-  color:#fff
+  font-size: 1rem;
+  line-height: 10vh;
+  margin: 0;
+  padding: 10px; 
+  color:$white;
+  cursor:pointer;
 }
 
 .current-user {
-  text-align:center;
-  color:#fff;
-  display:block;
-  padding:3px;
-  font-weight:400;
-  font-size:1rem;
-  text-decoration:none
+  margin-top: 1.9vh;
+
+    img {
+      cursor:pointer;
+      display:block;
+      height: 6vh;
+      padding:0; 
+      margin: 0;
+      border-radius:50%;
+    }
 }
 
-.user-logout {
+.user-popup {
   display:none;
-  position:relative;
-  margin-right:4px;
-  text-align:center;
-  text-decoration:none;
-  color:#fff
+  position:absolute;
+  z-index: 6;
+  top:10vh;
+  right:35px;
 }
 
-.login-button:hover .user-logout {
-  display:block
+.user-links {
+  background-color: rgba(0,0,0,0.5);
+  border-radius:0 0 5px 5px;
+  box-shadow: 0px 6px 60px -5px $black;
+  
+  ul {
+    margin: 0;
+    padding: 5px;
+    width:90px;
+ 
+    li {
+      list-style:none;
+      margin: 10px;
+      
+      a {
+        text-decoration:none;
+        padding: 10px;
+        width: 100%;
+        color:$white;
+        font-size: 1rem;
+          
+      }
+    }
+  }
 }
+
+.user-links a:hover {
+  color:#ddd;
+}
+
+
+/*  --------------------------------------- Extra Buttons------------------ */
+
 
 .extra-button {
   top:0;
   right:0;
-  margin-top:1.75vh;
+  margin-top:0.5vh;
   margin-right:3vh;
   cursor:pointer;
   float:right;
@@ -316,7 +344,7 @@ body {
 }
 
 .extra-button i {
-  font-size:1.5rem
+  font-size:2.4rem
 }
 
 .extra-button:hover , .current-user:hover , .user-logout:hover , .user-login:hover {
