--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -175,7 +175,7 @@ body {
     position: relative;
     
     ul {
-      margin: 0 0 10px 0;
+      margin: 0 0 10px 0 ;
       padding: 10px;
       width:30vw;
       
@@ -295,7 +295,7 @@ body {
   position:absolute;
   z-index: 6;
   top:10vh;
-  right:35px;
+  right:50px;
 }
 
 .user-links {
@@ -328,6 +328,9 @@ body {
   color:#ddd;
 }
 
+.user-links .selected {
+  font-weight:500;
+}
 
 /*  --------------------------------------- Extra Buttons------------------ */
 
