like button AJAX working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
       <div class="logo"><%= link_to 'TEA.', root_path %></div>
       <div class="search-button">
             <i class="fa fa-search search-icon"></i>
-            <!-- <input type="text" class="search-input" name="search" placeholder="Search"></input> -->
+            <input type="text" class="search-input" name="search" placeholder="Search"></input>
       </div> 
       
       <div class="tag-container center">
