--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,7 +6,7 @@
 			<%= render 'like', post: post %>
 	</div>
 	<div class="bookmark-wrapper">
-		<%= link_to bookmark_post_path(post),  id: dom_id(post), class: 'bookmark' do %>
+		<%= link_to bookmark_post_path(post), class: 'bookmark' do %>
     		<%= image_tag("1442420149_icon-18-bookmark.png")%>
     	<%end%>
     </div>
