--- a/app/views/posts/upvote.js.erb
+++ b/app/views/posts/upvote.js.erb
@@ -1,1 +1,1 @@
-$('#<%= dom_id(post) %>').html("<%= escape_javascript(render partial: 'like') %>"); 
+$('#<%= dom_id(@post) %>').html("<%= escape_javascript(render 'like', post: @post) %>"); 
