--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,13 +3,13 @@
 		<i class="fa fa-twitter-square"></i>
 	</div>
 	<div class="vote-wrapper">
-			<%= render 'like', post: post %>
+		<%= render 'like', post: post %>
 	</div>
+
 	<div class="bookmark-wrapper">
-		<%= link_to bookmark_post_path(post), class: 'bookmark' do %>
-    		<%= image_tag("1442420149_icon-18-bookmark.png")%>
-    	<%end%>
-    </div>
+		<%= render 'bookmark', post: post %>
+	</div>
+
 
 	<div class="post-container" onclick="play(this)">
 
