moved non-nav html to index, added ruby logic to nav, styling login form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@ $purple: #8171B6; // lightgrey //
 /*-------------------------------------Main Style---------------------------------------*/
 
 body {
-  background:$white;
+  background-color:#F4F4F5;
   color:#fff;
   margin:0;
   padding: 0;
