--- a/app/views/posts/bookmark.js.erb
+++ b/app/views/posts/bookmark.js.erb
@@ -1,1 +1,1 @@
-$('#<%= dom_id(@post) %>').html("<%= escape_javascript(render 'bookmark', post: @post) %>"); 
+$('.contentBox').html("<%= escape_javascript(render @posts) %>"); 
