--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -16,8 +16,11 @@
     <%= f.text_field :url %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.label :category_contribution %><br>
+    <%= f.text_field :category_contribution%>
+  </div>
+  <div class="field">
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
   </div>
   <div class="actions">
     <%= f.submit %>
