--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -4,8 +4,7 @@
   <thead>
     <tr>
       <th>Url</th>
-      <th>User</th>
-      <th>Category_Contribution</th>
+      <th>Category Contribution</th>
 
       <th colspan="3"></th>
     </tr>
@@ -14,9 +13,8 @@
   <tbody>
     <% @contributions.each do |contribution| %>
       <tr>
-        <td><%= contribution.url %></td>
-        <td><%= contribution.user_id %></td>
-        <td><%= contribution.category_contribution %></td>
+        <td><%= contribution.contribution_url %></td>
+        <td><%= contribution.contribution_category %></td>
         <td><%= link_to 'Show', contribution %></td>
         <td><%= link_to 'Edit', edit_contribution_path(contribution) %></td>
         <td><%= link_to 'Destroy', contribution, method: :delete, data: { confirm: 'Are you sure?' } %></td>
