finalising contribution stuff including a bit off applhtml css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,17 @@
                 <%= link_to "Sign in / Sign up" , new_user_session_path,  class: 'user-login' %>
           <% end %>
           
-    </div>
+      </div>
+      
+      <div class="contribute-section">
+        <%= link_to 'Contribute', new_contribution_path, class: 'contribute-text' %>
+      </div>
+        
+
+
+
+
+
     </div>
 
 
