--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -320,6 +320,27 @@ body {
 .user-links .selected {
   font-weight:500;
 }
+/*  --------------------------------------- Contribute section------------------ */
+
+.contribute-section {
+  height:10vh;
+  line-height: 10vh;
+  float: right;
+  margin-right: 10px;
+  
+    a {
+      text-decoration:none;
+      color:$white;
+      font-size: 1rem;
+      padding: 10px;
+    }
+
+    &:hover a {
+      color:$lightred;
+    }
+}  
+
+
 
 /*  --------------------------------------- Extra Buttons------------------ */
 
