--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -4,6 +4,8 @@
 	height: 200px;
 	border-style: solid;
 	border-width: 2px;
-	
-
+	position: absolute;
+	display:block;
+	top:20vh;
+	left:33.333%
 }
