adding images to assets and bit of styling

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,11 +1,25 @@
+$blue: #81B6DB;  // blue  //
+$green: #77DD77;    // green // 
+$red: #FF4955;   // red //
+$darkred: #FF5567; // darker red //
+$lightred: #FFD8E8; // light red//
+$orange: #FFB246;   // orange //
+$white: #fff; // white // 
+$black: #000; // black //
+$grey: #eee; // lightgrey //
+$purple: #8171B6; // purple //
+$yellow: #FFF5AC; // yellow //
+
+
 .log-in-box {
 	background:#FFF;
 	width: 33.333%;
 	height: 200px;
-	border-style: solid;
-	border-width: 2px;
 	position: absolute;
 	display:block;
 	top:20vh;
+  	-webkit-box-shadow: 0px 0px 157px -34px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 157px -34px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 157px -34px rgba(0,0,0,0.75);
 	left:33.333%
 }
