--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,9 +68,11 @@ body {
   border-radius:3px
 }
 
-.cover-photo img {
-  width:100%;
+img {
+      width:100%;
 }
+
+
 
 /*// .cover-photo iframe{
 //   width:100%;
@@ -235,7 +237,7 @@ body {
 }
 
 ::-webkit-input-placeholder {
-  font-family:'Roboto',sans-serif;
+   font-family:'Roboto',sans-serif;
    color: $white;
    font-weight:400;
 }
