--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,14 +65,11 @@ body {
   position:relative;
   overflow:hidden;
   -webkit-border-radius:3px;
-  border-radius:3px
+  border-radius:3px; 
+       img {
+         width:100%;
+     }
 }
-
-img {
-      width:100%;
-}
-
-
 
 /*// .cover-photo iframe{
 //   width:100%;
@@ -91,6 +88,7 @@ img {
   height:100vh;
   background-color:$blue;
   opacity: 0.7;
+  cursor:default;
 }
 
 /*--------------------------------------Main Title--------------------------------------*/
