--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,20 +19,21 @@ $purple: #8171B6; // lightgrey //
 
 .static-page-header {
       position: absolute;
-      width:100%;
-	font-size: 2.2rem;
+      width:50%;
+      text-align: center;
+      font-size: 2.2rem;
       padding: 0;
-      margin: 2vh;
+      margin-top: 2vh;
+      margin-left:25%;
+      font-weight:400;
 }
 
 
 .about-content, .contact-content, .help-content , .copyright-content{
 	position: fixed;
-	width:500px;
+	width:60%;
 	font-size: 1.25rem;
-	top:50px;
-	left:350px;
-	float: left;
-	margin: 0;
-	padding: 50px;
+	top:15vh;
+	text-align: center;
+	margin: 0 20%;
 }
