--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,19 +25,17 @@
   <div class="dimmer" data-sidebar-dimmer></div>
 
   <div class="cover-photo">
-            <div class="img-cover"></div>
-            <% if current_page?('/') or current_page?('/posts') %>
-                <%= image_tag('cover-photo') %> 
-            <% else%>
-                <%= image_tag('blurred-cover-photo') %> 
-           <% end %>
+            <%= link_to root_path do %>
+                <div class="img-cover"></div>
+             <% end %>
+                <%= image_tag('cover-photo-min' , class: 'nb-cover-photo')%> 
+                <%= image_tag('blurred-cover-photo' ,class: 'b-cover-photo')%> 
   </div>
 
     <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
     
       <div class="logo"><%= link_to 'TEA.', root_path %></div>
       
-      <% if current_page?('/') or current_page?('/posts') %>
 
         <div class="search-button">
               <i class="fa fa-search search-icon"></i>
@@ -87,8 +85,6 @@
       <div class="contribute-section">
         <%= link_to 'Contribute', new_contribution_path, class: 'contribute-text' %>
       </div>
-        
-      <% end %>
 
     </div>
 
@@ -114,22 +110,6 @@
         </div>  
   
       </div>
-
-<!--     <div class="hero-phrase center"><%= @category_title %></div>
-    
-    <div class="hero-buttons center">
-      <div class="mostrecent-button" onclick="window.location.reload(true)">Latest Videos</div>
-      <%= link_to 'Randomize' , randomize_posts_path , id: 'random-button' %>
-    </div>
-    
-      <div class="start-watching center">Start watching now</div>
-      <div class="scroll-to-content">
-        <i class="fa fa-angle-double-down scroll-arrow"></i>
-      </div>
-
-      -->
-
-      <!-- <div class="breaker"></div>  -->
       
 	<div class="content">
       <%= yield %>
@@ -165,12 +145,14 @@
   $(document).ready(function() {
     $(".tag-wrap").click(function(e) {
         $(".category-tags").toggle();
+        $(".nb-cover-photo").toggle();
         e.stopPropagation();
     });
 
     $(document).click(function(e) {
         if (!$(e.target).is('.category-tags, .category-tags*')) {
             $(".category-tags").hide();
+            $(".nb-cover-photo").hide();
         }
     });
 });
@@ -180,12 +162,14 @@
   $(document).ready(function() {
     $(".login-section").click(function(e) {
         $(".user-popup").toggle();
+        $(".nb-cover-photo").toggle();
         e.stopPropagation();
     });
 
     $(document).click(function(e) {
         if (!$(e.target).is('.user-popup, .user-popup*')) {
             $(".user-popup").hide();
+            $(".nb-cover-photo").hide();
         }
     });
 });
