--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -22,18 +22,22 @@
     
   <div class="wrapper">
   <div class="dimmer" data-sidebar-dimmer></div>
+  <div class="cover-photo">
+            <div class="img-cover"></div>
+                <%= image_tag('blurred-cover-photo') %> 
+  </div>
 
     <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
     
       <div class="logo"><%= link_to 'TEA.', root_path %></div>
-  
-  
+
+      <h2 class="static-page-header"><%= @title %></h2>
+
       <div class="extra-button" data-sidebar-button>
             <i class="fa fa-bars extra-icon"></i>
       </div>
-
-
     </div>
+
 
 
     <div class="sidebar" data-sidebar>
