--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,9 +66,6 @@ body {
   overflow:hidden;
   -webkit-border-radius:3px;
   border-radius:3px; 
-       img {
-         width:100%;
-     }
 }
 
 /*// .cover-photo iframe{
@@ -90,6 +87,10 @@ body {
   opacity: 0.7;
   cursor:default;
 }
+
+      .nb-cover-photo, .b-cover-photo,  {
+       width:100%;
+     }
 
 /*--------------------------------------Main Title--------------------------------------*/
 .header {
